deploy/staging/deployment-postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: smi-master-staging
  labels: 
    app: postgres
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
    tier: database
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: smi-master-staging
  labels:
    app: postgres
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: postgres
      tier: database
  template:
    metadata:
      name: postgres
      labels:
        app: postgres
        tier: database
    spec:
      volumes:
      - name: postgres-pv
        persistentVolumeClaim:
          claimName: postgres-smi-master-staging-pvc
      containers:
      - name: postgres
        image: postgres:9.6-alpine
        ports:
        - containerPort: 5432
