deploy/staging/deployment-master.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: master-ingress
  namespace: smi-master-staging
  labels:
    app: smi-master-staging
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: smi-master.dev.lappis.rocks
    http:
      paths:
      - backend:
          serviceName: master-service
          servicePort: 80
  tls:
  - hosts:
    - smi-master.dev.lappis.rocks
    secretName: smi-master-staging-letsencrypt-prod-crt
---
apiVersion: v1
kind: Service
metadata:
  name: master-service
  namespace: smi-master-staging
  labels:
    app: smi-master-staging
spec:
  ports:
  - port: 80
    targetPort: 8001
    protocol: TCP
    name: http
  selector:
    app: smi-master-staging
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: master-deployment
  namespace: smi-master-staging
  labels:
    app: smi-master-staging
spec:
  selector:
    matchLabels:
      app: smi-master-staging
  replicas: 1
  template:
    metadata:
      labels:
        app: smi-master-staging
    spec:
      containers:
      - name: smi-master-staging
        image: ${CICD_IMAGE}:${CICD_EXECUTION_SEQUENCE}
        command: ["sh", "scripts/start-prod.sh"]
        ports:
        - containerPort: 8001
          protocol: TCP
